# monitoring

./: .env.example  .gitignore  .pre-commit-config.yaml  .sops.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  monitoring.yaml  pyproject.toml
.github/workflows/: _run-monitoring.yml  ci.yml  daily.yml  hourly.yml  multisig-checker.yml  weekly.yml
3jane/: README.md  main.py
3jane/abi/: ProtocolConfig.json
aave/: main.py  proposals.py
api/: README.md  __init__.py  __main__.py  server.py
apyusd/: README.md  main.py
automation/: README.md  __main__.py  config.py  git_sync.py  jobs.yaml  runner.py
cap/: liquidity.py
compound/: main.py  proposals.py
deploy/: Caddyfile  alerts-api.md  cutover.md  emergency-dispatch-demo.md  install.sh  integration-check.sh  migrate-file-cache-to-db.sh  runbook.md  throwaway-vps.sh
deploy/secrets/: .gitignore  README.md  prod.env.example
deploy/systemd/: monitoring-api.service  monitoring.service  yearn-monitor.service
docker/: .dockerignore  Dockerfile  docker-compose.yml  entrypoint.sh
docs/: alerts-api-implementation-plan.md  emergency-dispatch-demo.md
ethena/: ethena.py
fluid/: proposals.py
infinifi/: README.md  main.py
lido/steth/: main.py
lido/stmatic/: main.py
lrt-pegs/: README.md  origin_protocol.py
lrt-pegs/curve/: main.py
lrt-pegs/fluid/: main.py
maker/: proposals.py
maple/: README.md  collateral.py  main.py
morpho/: README.md  _shared.py  governance.py  governance_v2.py  markets.py  markets_v2.py  morpho_ql_schema.txt
morpho/abi/: morpho_market_v1_adapter_v2.json  morpho_vault_v1_adapter.json  vault_v2.json
prices/: README.md  main.py
protocols/3jane/: README.md  main.py
protocols/aave/: README.md  main.py  proposals.py
protocols/apyusd/: main.py
protocols/bad-debt/: bad-debt-trigger.py
protocols/cap/: README.md  liquidity.py
protocols/compound/: README.md  collateral.py  main.py  proposals.py
protocols/fluid/: README.md  (+1 more)
rtoken/: README.md  monitor_rtoken.py
safe/: addresses.py  main.py
scripts/: advance_timelock_cursor.py  diagnose_telegram_400.py
stables/: dune_large_transfers.py  main.py
strata/: README.md
tests/: conftest.py  test_3jane.py  test_aave_proposals.py  test_address_resolver.py  test_ai_explainer.py  test_alert_capture.py  test_alerts_api.py  test_apyusd.py  test_automation_config.py  test_automation_git_sync.py  test_automation_render.py  test_automation_runner.py  test_cache_sqlite.py  test_calldata_decoder.py  test_chainlink.py  test_compound_proposals.py  test_disk_cache.py  test_dune_large_transfers.py  test_erc20_metadata.py  test_fluid_proposals.py  test_impl_diff.py  test_known_addresses.py  test_llm.py  test_maker_proposals.py  test_maple_collateral.py  test_migrate_cache_to_db.py  test_monitoring_config.py  test_morpho_governance.py  test_morpho_markets.py  test_morpho_v2_decoders.py  test_morpho_v2_governance.py  test_on_chain_state.py  test_paste.py  test_pegged_assets.py  test_prices.py  test_proxy_upgrade.py  test_risk_anchors.py  test_runner.py  test_safe_main.py  test_safe_multisend.py  (+13 more)
timelock/: README.md  SKILL.md  timelock_alerts.py
usdai/: main.py
ustb/: README.md  main.py
utils/: address_resolver.py  alert.py  cache.py  chainlink.py  chains.py  config.py  defillama.py  disk_cache.py  dispatch.py  erc20_metadata.py  erc20_supply_delta_monitor.py  formatting.py  gauntlet.py  http_client.py  impl_diff.py  known_addresses.py  logger.py  migrate_cache_to_db.py  monitoring_config.py  on_chain_state.py  paste.py  paths.py  pegged_assets.py  proxy.py  prune_alerts.py  risk_anchors.py  runner.py  safe_tx.py  source_context.py  store.py  swiss_knife.py  telegram.py  wavey_gist.py  web3_wrapper.py
yearn/: README.md  alert_large_flows.py  check_endorsed.py  check_stuck_triggers.py  check_timelock_delay.py  yvusd.py
(+73 files in other folders)
